/**
 * This is an example of a protocol buffers message definition file. Use the following command
 * to generate the java code for these messages:
 * protoc -I=[proto directory] --java_out=[java src directory] [proto file to compile]
 */
syntax = "proto3";

/* protobuf style guide: https://developers.google.com/protocol-buffers/docs/style */

package fuse_java_starter;

option java_package = "org.galatea.starter.entrypoint.messagecontracts";
option java_outer_classname = "ProtobufMessages";

/* enables us to handle multiple TradeAgreementMessages */
message TradeAgreementProtoMessages {
  repeated TradeAgreementProtoMessage message = 1;
}

/* defines the message format for trade agreements */
message TradeAgreementProtoMessage {
  int64 id = 1;
  string instrument = 2;
  string internal_party = 3;
  string external_party = 4;
  string buy_sell = 5;
  double qty = 6;
}

message SettlementMissionProtoMessages {
  repeated SettlementMissionProtoMessage message = 1;
}

/* defines the message format for settlement missions */
message SettlementMissionProtoMessage {
  int64 id = 1;
  string instrument = 2;
  string external_party = 3;
  string depot = 4;
  string direction = 5;
  double qty = 6;
}

message SettlementResponseProtoMessage {
  repeated string spawnedMissionPaths = 1;
}